tests/baselines/reference/prefixUnaryOperatorsOnExportedVariables.errors.txt
prefixUnaryOperatorsOnExportedVariables.ts(19,5): error TS2873: This kind of expression is always falsy.


==== prefixUnaryOperatorsOnExportedVariables.ts (1 errors) ====
    export var x = false;
    export var y = 1;
    if (!x) {
        
    }
    
    if (+x) {
        
    }
    
    if (-x) {
        
    }
    
    if (~x) {
        
    }
    
    if (void x) {
        ~~~~~~
!!! error TS2873: This kind of expression is always falsy.
        
    }
    
    if (typeof x) {
        
    }
    
    if (++y) {
        
    }